compiler/tests/should-fail/DuplicateProtocolArgument.via
/* NameClashError */

host alice

fun main() {
    val x: int@Local(host = alice, host = alice) = 0;
}
